--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,12 @@ language: go
 
 go:
   - 1.9.x
-  - tip
 
 before_install:
   - go get -t -v ./...
 
 script:
-  - go test -race -coverprofile=coverage.txt -covermode=atomic
+  - go test -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
